# JumperBall

./: Ball.h  Block.cpp  Block.h  CMakeLists.txt  Map.cpp  Map.h  README.md  conanfile.txt  levelsDifficulty.txt  main.cpp  problem.txt  sortDifficulties.txt
coreClasses/: Ball.cpp  Ball.h  BaseClass.cpp  BaseClass.h  Block.h  CMakeLists.txt  Camera.cpp  Camera.h  ClassicalMechanics.cpp  ClassicalMechanics.h  Gravity.cpp  Gravity.h  Map.cpp  Map.h  ParallelTask.cpp  ParallelTask.h  Player.cpp  Player.h  Types.cpp  Types.h
coreClasses/blocks/: BaseBlock.cpp  BaseBlock.h  Block.cpp  Block.h  BrittleBlock.cpp  BrittleBlock.h  FireBlock.cpp  FireBlock.h  GhostBlock.cpp  GhostBlock.h  IceBlock.cpp  IceBlock.h  JumpBlock.cpp  JumpBlock.h  SharpBlock.cpp  SharpBlock.h  SpicyBlock.cpp  SpicyBlock.h
coreClasses/enemies/: DarkBall.cpp  DarkBall.h  Enemy.cpp  Enemy.h  Laser.cpp  Laser.h  ThornBall.cpp  ThornBall.h
coreClasses/gameMenu/: ArrowLabel.cpp  ArrowLabel.h  BoxLabel.cpp  BoxLabel.h  CenteredNode.cpp  CenteredNode.h  DownNode.h  FillingNode.cpp  FillingNode.h  Geometry.h  ItemLabel.cpp  ItemLabel.h  Label.cpp  Label.h  LabelGeometry.cpp  LabelGeometry.h  LeftNode.cpp  LeftNode.h  LevelsPage.cpp  LevelsPage.h  MainNode.cpp  MainNode.h  Menu.cpp  Menu.h  MessageLabel.cpp  MessageLabel.h  Node.cpp  Node.h  ObjectLabel.cpp  ObjectLabel.h  Page.cpp  Page.h  ScaledNode.cpp  ScaledNode.h  ScreenNode.h  SwitchLabel.cpp  SwitchLabel.h  TitlePage.cpp  TitlePage.h  UpNode.cpp  (+1 more)
coreClasses/movements/: Movement.h  NextBlock.cpp  NextBlock.h  TurnBack.cpp  TurnBack.h  TurnLeft.cpp  TurnLeft.h  TurnRight.cpp  TurnRight.h
coreClasses/objects/: Bonus.cpp  Bonus.h  Clock.cpp  Clock.h  Coin.cpp  Coin.h  Key.cpp  Key.h  Object.cpp  Object.h
coreClasses/player/: .Player.cpp.swp  .Player.h.swp  Player.cpp  Player.h
coreClasses/scene/: Ball.cpp  Ball.h  BallState.cpp  BallState.h  ClassicalMechanics.cpp  ClassicalMechanics.h  Displayable.cpp  Displayable.h  Frames.h  ItemsContainer.h  Map.cpp  Map.h  MapGenerator.cpp  MapGenerator.h  MapState.cpp  MapState.h  MovableObject.h  ObjectState.cpp  ObjectState.h  SceneElement.cpp  SceneElement.h  Screen.cpp  Screen.h  Shape.cpp  Shape.h  Star.cpp  Star.h  StarState.cpp  StarState.h  State.cpp  State.h
coreClasses/system/: Chronometer.cpp  Chronometer.h  DoubleChronometer.cpp  DoubleChronometer.h  Geometry.cpp  Geometry.h  GoToAuthorPageOutput.cpp  GoToAuthorPageOutput.h  KeyboardKey.cpp  KeyboardKey.h  Mouse.cpp  Mouse.h  MusicStatusOutput.cpp  MusicStatusOutput.h  ParallelTask.cpp  ParallelTask.h  RequestQuitOutput.cpp  RequestQuitOutput.h  RunAdOutput.cpp  RunAdOutput.h  SaveFileOutput.cpp  SaveFileOutput.h  ShowPrivacyPolicyOutput.cpp  ShowPrivacyPolicyOutput.h  SoundOutput.cpp  SoundOutput.h  SoundStatusOutput.cpp  SoundStatusOutput.h  Types.cpp  Types.h  UpdateOutput.cpp  UpdateOutput.h
graphicsClasses/: CMakeLists.txt  Camera.cpp  Camera.h  Controller.cpp  Controller.h  FrameBuffer.cpp  FrameBuffer.h  GpuBuffer.cpp  GpuBuffer.h  Menu.cpp  Menu.h  Mesh.cpp  Mesh.h  MeshComponent.cpp  MeshComponent.h  MeshGenerator.cpp  MeshGenerator.h  Rendering.cpp  Rendering.h  RenderingCache.cpp  RenderingCache.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Star.cpp  Star.h  StarState.cpp  StarState.h  TextRendering.cpp  TextRendering.h  Utility.cpp  Utility.h  Viewer.cpp  Viewer.h  testClass.cpp  testClass.h
graphicsClasses/animations/: Animation.cpp  Animation.h  BallAnimation.cpp  BallAnimation.h  BlockAnimation.cpp  BlockAnimation.h  EnemyAnimation.cpp  EnemyAnimation.h  ObjectAnimation.cpp  ObjectAnimation.h  SpecialAnimation.cpp  SpecialAnimation.h
graphicsClasses/componentsGeneration/: LabelGroupGenerator.cpp  LabelGroupGenerator.h  MapGroupGenerator.cpp  MapGroupGenerator.h  MeshGenerator.h  RenderGroupGenerator.h  ScreenGroupGenerator.cpp  ScreenGroupGenerator.h  StarGroupGenerator.cpp  StarGroupGenerator.h  createGeometricShape.cpp  genBall.cpp  genBlock.cpp  genEnemy.cpp  genGeometricShapesFromLabel.cpp  genItem.cpp  genJumpers.cpp  genLettersLabel.cpp  genMap.cpp  genObject.cpp  genOthersLabel.cpp  genQuad.cpp  genQuadLabel.cpp  genScreen.cpp  genShapesLabel.cpp  genSharps.cpp  genSpecial.cpp  genStar.cpp  genStars.cpp
graphicsClasses/controller/: Controller.cpp  Controller.h
graphicsClasses/frameBuffer/: ColorableFrameBuffer.cpp  ColorableFrameBuffer.h  DepthFrameBuffer.cpp  DepthFrameBuffer.h  FrameBuffer.cpp  FrameBuffer.h  GpuFrameBuffer.cpp  GpuFrameBuffer.h  RenderBuffer.cpp  RenderBuffer.h  TextureSampler.cpp  TextureSampler.h
graphicsClasses/geometry/: Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  GeometricShape.cpp  GeometricShape.h  Pyramid.cpp  Pyramid.h  Quad.cpp  Quad.h  QuadState.cpp  QuadState.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
graphicsClasses/graphicBodies/: GraphicBody.cpp  GraphicBody.h
graphicsClasses/graphicMenu/: ArrowRendering.cpp  ArrowRendering.h  BoxRendering.cpp  BoxRendering.h  FontTexturesGenerator.cpp  FontTexturesGenerator.h  LabelRendering.cpp  LabelRendering.h  Menu.cpp  Menu.h  MenuRendering.cpp  MenuRendering.h  MenuRenderingOld.cpp  MenuRenderingOld.h  ObjectRendering.cpp  ObjectRendering.h  PageRendering.cpp  PageRendering.h  TextRendering.cpp  TextRendering.h
graphicsClasses/process/: BloomProcess.cpp  BloomProcess.h  GpuVertexArray.cpp  GpuVertexArray.h  HorizontalBlurProcess.h  LevelProcess.cpp  LevelProcess.h  Mesh.cpp  Mesh.h  RenderGroup.cpp  RenderGroup.h  RenderGroupUniforms.cpp  RenderGroupUniforms.h  RenderGroupsManager.cpp  RenderGroupsManager.h  RenderPass.cpp  RenderPass.h  RenderProcess.cpp  RenderProcess.h  ShadowProcess.cpp  ShadowProcess.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferBase.cpp  UniformBufferBase.h  VerticalBlurProcess.h
graphicsClasses/scene/: AboveMovingCamera.h  Camera.cpp  Camera.h  CameraState.cpp  CameraState.h  GraphicBall.cpp  GraphicBall.h  GraphicBlock.cpp  GraphicBlock.h  GraphicEnemy.cpp  GraphicEnemy.h  GraphicMap.cpp  GraphicMap.h  GraphicObject.cpp  GraphicObject.h  GraphicQuad.cpp  Mesh.cpp  (+15 more)
libs/: CMakeLists.txt
(+564 files in other folders)
