CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)

IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
	SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
ENDIF()

ADD_SUBDIRECTORY(coreClasses)
ADD_SUBDIRECTORY(graphicsClasses)

PROJECT(JumperBallApplication)

	
IF (UNIX AND NOT APPLE)
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie" CACHE STRING "" FORCE) #allows Netbeans to load the app
ENDIF()



SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF ( CMAKE_COMPILER_IS_GNUCC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wswitch-enum -Wlogical-op" CACHE STRING "" FORCE)
ENDIF()

IF ( MSVC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W3" CACHE STRING "" FORCE)
ENDIF()



FILE(GLOB SOURCE_FILES
	${CMAKE_SOURCE_DIR}/main.cpp)

INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/fonts DESTINATION ${CMAKE_CURRENT_BINARY_DIR})


ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCE_FILES})
INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/maps DESTINATION ${CMAKE_BINARY_DIR})

ADD_DEPENDENCIES(${PROJECT_NAME} _GLFW_)
ADD_DEPENDENCIES(${PROJECT_NAME} _GLM_)
ADD_DEPENDENCIES(${PROJECT_NAME} _FREETYPE_)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/freetype2)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib/)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} JumperBallGraphic )

