CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

IF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
	SET(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR} CACHE PATH "" FORCE)
ENDIF(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)


PROJECT(JumperBallApplication)


IF (NOT CMAKE_BUILD_TYPE OR CMAKE_BUILD_TYPE STREQUAL "")
	#	SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
	IF ( MSVC OR (CMAKE_GENERATOR STREQUAL Xcode) )
		SET (CMAKE_BUILD_TYPE "Debug" CACHE STRING "" FORCE)
	ELSE()
		SET (CMAKE_BUILD_TYPE "Release" CACHE STRING "" FORCE)
	ENDIF()
ENDIF()

ADD_SUBDIRECTORY(coreClasses)
ADD_SUBDIRECTORY(graphicsClasses)
	
IF (UNIX AND NOT APPLE)
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie" CACHE STRING "" FORCE) #allows Netbeans to load the app
ENDIF()



SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF ( CMAKE_COMPILER_IS_GNUCC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wswitch-enum -Wlogical-op" CACHE STRING "" FORCE)
ENDIF()

IF ( MSVC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W3" CACHE STRING "" FORCE)
ENDIF()

IF (CMAKE_CXX_COMPILER_ID MATCHES "Clang")
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wswitch-enum -Wc++11-compat-pedantic" CACHE STRING "" FORCE)
ENDIF()

set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})


FILE(GLOB SOURCE_FILES
	${CMAKE_SOURCE_DIR}/application/*.cpp)

FILE(GLOB HEADER_FILES
	${CMAKE_SOURCE_DIR}/application/*.h)


INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/fonts DESTINATION ${CMAKE_BINARY_DIR}/bin)
IF ( MSVC )
INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/fonts DESTINATION ${CMAKE_BINARY_DIR})
ENDIF()


# Directory for output files
  SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib 
    CACHE PATH "Output directory for static libraries.")

  SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
    CACHE PATH "Output directory for shared libraries.")

  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin
    CACHE PATH "Output directory for executables and DLL's.")

  FOREACH( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} )
    STRING( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
    SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/bin" CACHE PATH "" FORCE)
    SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/lib" CACHE PATH "" FORCE)
    SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} "${CMAKE_BINARY_DIR}/lib" CACHE PATH "" FORCE)
  ENDFOREACH()


ADD_EXECUTABLE(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/maps DESTINATION ${CMAKE_BINARY_DIR}/bin)
IF ( MSVC )
	INSTALL (DIRECTORY ${CMAKE_SOURCE_DIR}/maps DESTINATION ${CMAKE_BINARY_DIR})
ENDIF()

#set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

ADD_DEPENDENCIES(${PROJECT_NAME} _GLFW_)
ADD_DEPENDENCIES(${PROJECT_NAME} _GLM_)
ADD_DEPENDENCIES(${PROJECT_NAME} _FREETYPE_)

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/freetype2)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib/)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} JumperBallGraphic )

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")

#INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin)

