CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(JumperBallCore)
	
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)

IF (UNIX AND NOT APPLE)
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie" CACHE STRING "" FORCE) #allows Netbeans to load the app
ENDIF()


SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

IF ( CMAKE_COMPILER_IS_GNUCC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -pedantic -Wall -Wextra -Woverloaded-virtual -Wfloat-equal -Wwrite-strings -Wpointer-arith -Wcast-qual -Wcast-align -Wredundant-decls -Wdouble-promotion -Winit-self -Wswitch-default -Wswitch-enum -Wlogical-op" CACHE STRING "" FORCE)
ENDIF()

IF ( MSVC )
	SET (CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} /W3" CACHE STRING "" FORCE)
ENDIF()

FILE(GLOB SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/blocks/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/objects/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gameMenu/*.cpp)

FILE(GLOB HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/blocks/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/objects/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/gameMenu/*.h)


ADD_LIBRARY(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC .)

