CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(JumperBallCore)
	
set (CMAKE_CXX_STANDARD 11)
set (CMAKE_CXX_STANDARD_REQUIRED ON)
set (CMAKE_CXX_EXTENSIONS OFF)


FILE(GLOB SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/blocks/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/objects/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/gameMenu/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/enemies/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/movements/*.cpp)

FILE(GLOB HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/blocks/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/objects/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/gameMenu/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/enemies/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/movements/*.h)


ADD_LIBRARY(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC .)

