CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

ADD_SUBDIRECTORY(thirdparty)

PROJECT(JumperBallGraphic)

IF (UNIX AND NOT APPLE)
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie" CACHE STRING "" FORCE) #allows Netbeans to load the app
ENDIF()


SET (CMAKE_CXX_STANDARD 11)
SET (CMAKE_CXX_STANDARD_REQUIRED ON)
SET (CMAKE_CXX_EXTENSIONS OFF)


FILE(GLOB SOURCE_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/animations/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/geometry/*.cpp
	${CMAKE_CURRENT_SOURCE_DIR}/uniformBlocks/*.cpp)

FILE(GLOB HEADER_FILES
	${CMAKE_CURRENT_SOURCE_DIR}/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/animations/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/geometry/*.h
	${CMAKE_CURRENT_SOURCE_DIR}/uniformBlocks/*.h)

INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_BINARY_DIR}/bin)
INSTALL (DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_BINARY_DIR})


ADD_LIBRARY(${PROJECT_NAME} ${HEADER_FILES} ${SOURCE_FILES})

ADD_DEPENDENCIES(${PROJECT_NAME} _GLFW_)
ADD_DEPENDENCIES(${PROJECT_NAME} _GLM_)
ADD_DEPENDENCIES(${PROJECT_NAME} _FREETYPE_)


INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include/freetype2)

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/lib/)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} JumperBallThirdParty JumperBallCore )
TARGET_INCLUDE_DIRECTORIES( ${PROJECT_NAME} PUBLIC . )

